# CyberDropDownloader

./: .gitignore  CHANGELOG.txt  Dockerfile  LICENSE-THIRD-PARTY  Pipfile  README.md  Start.bat  Start.sh  Timelog  To_Do_Features  URLs.txt  changelog.txt  downloader.py  geturls.py  main.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  start.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yaml
cyberdrop-dl/: main.py
cyberdrop-dl/utils/: scraper.py
cyberdrop-dl/utils/crawlers/: Chibisafe_Spider.py  Erome_Spider.py  ShareX_Spider.py
cyberdrop_dl/: __init__.py  gui.py  main.py  settings.py
cyberdrop_dl/base_functions/: base_functions.py  config_manager.py  config_schema.py  data_classes.py  error_classes.py  sorting_functions.py  sql_helper.py
cyberdrop_dl/client/: client.py  downloaders.py  rate_limiting.py
cyberdrop_dl/clients/: download_client.py  errors.py  scraper_client.py
cyberdrop_dl/crawlers/: Anonfiles_Spider.py  Bunkr_Spider.py  Coomeno_Spider.py  Coomer_Spider.py  CyberFile_Spider.py  Cyberdrop_Spider.py  Cyberfile_Spider.py  EHentai_Spider.py  Erome_Spider.py  Fapello_Spider.py  Gfycat_Spider.py  GoFile_Spider.py  HGameCG_Spider.py  ImgBox_Spider.py  Imgur_Spider.py  Kemono_Spider.py  LeakedNudes_Spider.py  LoveFap_Spider.py  NSFWXXXCrawler.py  NSFWXXX_Spider.py  PimpAndHost_Spider.py  PixelDrain_Spider.py  Pixeldrain_Crawler.py  Pixeldrain_Spider.py  PostImg_Spider.py  Postimg_Spider.py  RedGifs_Spider.py  Reddit_Spider.py  Redgifs_Spider.py  Rule34_Spider.py  Saint_Spider.py  Scrolller_Spider.py  ShareX_Spider.py  SimpCity_Spider.py  SocialMediaGirls_Spider.py  Thotsbay_Spider.py  XBunker_Spider.py  XBunkr_Spider.py  Xenforo_Spider.py
cyberdrop_dl/db/: table_definitions.py
cyberdrop_dl/db/tables/: cache_table.py  history_table.py  temp_table.py
cyberdrop_dl/downloader/: downloader.py  downloader_utils.py  downloaders.py  old_downloaders.py  progress_definitions.py
cyberdrop_dl/managers/: args_manager.py  cache_manager.py  client_manager.py  config_manager.py  db_manager.py  directory_manager.py  download_manager.py  file_manager.py  log_manager.py  manager.py  path_manager.py  progress_manager.py  queue_manager.py
cyberdrop_dl/scraper/: JDownloader_Integration.py  Scraper.py  crawler.py  jdownloader.py  scraper.py  scraper_helper.py
cyberdrop_dl/scraper/crawlers/: bunkr_crawler.py  bunkrr_crawler.py  celebforum_crawler.py  coomer_crawler.py  cyberdrop_crawler.py  cyberfile_crawler.py  ehentai_crawler.py  erome_crawler.py  f95zone_crawler.py  fapello_crawler.py  gofile_crawler.py  hotpic_crawler.py  imageban_crawler.py  imgbb_crawler.py  imgbox_crawler.py  imgkiwi_crawler.py  imgur_crawler.py  jpgchurch_crawler.py  kemono_crawler.py  leakedmodels_crawler.py  mediafire_crawler.py  nudostar_crawler.py  nudostartv_crawler.py  omegascans_crawler.py  pimpandhost_crawler.py  pixeldrain_crawler.py  postimg_crawler.py  realbooru_crawler.py  reddit_crawler.py  redgifs_crawler.py  rule34vault_crawler.py  rule34xxx_crawler.py  rule34xyz_crawler.py  saint_crawler.py  scrolller_crawler.py  simpcity_crawler.py  socialmediagirls_crawler.py  toonily_crawler.py  xbunker_crawler.py  xbunkr_crawler.py
cyberdrop_dl/ui/: ui.py
cyberdrop_dl/ui/progress/: downloads_progress.py  file_progress.py  progress_definitions.py  scraping_progress.py  statistic_progress.py
cyberdrop_dl/ui/prompts/: general_prompts.py  settings_authentication_prompts.py  settings_global_prompts.py  settings_user_prompts.py  url_file_prompts.py
cyberdrop_dl/utils/: base_functions.py  data_classes.py  downloaders.py  rate_limiting.py  scraper.py  scraper_helper.py  sorting.py  sql_helper.py  utilities.py
cyberdrop_dl/utils/args/: args.py  browser_cookie_extraction.py  config_definitions.py
cyberdrop_dl/utils/backports/: taskgroups.py
cyberdrop_dl/utils/crawlers/: Anonfiles_Spider.py  Bunkr_Spider.py  Chibisafe_Spider.py  Coomer_Spider.py  Cyberdrop_Spider.py  Cyberfile_Spider.py  Erome_Spider.py  Gfycat_Spider.py  GoFile_Spider.py  Kemono_Spider.py  Pixeldrain_Crawler.py  Redgifs_Spider.py  Saint_Spider.py  ShareX_Spider.py  Thotsbay_Spider.py
cyberdrop_dl/utils/database/: table_definitions.py
cyberdrop_dl/utils/database/tables/: history_table.py  temp_table.py
cyberdrop_dl/utils/dataclasses/: supported_domains.py  url_objects.py
cyberdrop_dl/utils/db/: table_definitions.py
cyberdrop_dl/utils/db/tables/: cache_table.py  history_table.py  temp_table.py
cyberdrop_dl/utils/transfer/: first_time_setup.py  transfer_v4_config.py  transfer_v4_db.py
tests/: test_crawlers_bunkr_spider.py
utils/: downloaders.py  scraper.py  scrapers.py
utils/crawlers/: Chibisafe_Spider.py  Erome_Spider.py  GoFile_Spider.py  ShareX_Spider.py
