[metadata]
name = cyberdrop-dl
version = attr: cyberdrop_dl.__version__
author = Jules-WinnfieldX
author_email = JulesWinnfieldII@protonmail.com
description = Bulk downloader for multiple file hosts and forum sites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jules-WinnfieldX/CyberDropDownloader
project_urls =
    Bug Tracker = https://github.com/Jules-WinnfieldX/CyberDropDownloader/issues

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    aiofiles>=23.1.0
    aiohttp>=3.8.4
    beautifulsoup4>=4.12.2
    certifi>=2022.12.7
    myjdapi>=1.1.6
    PyYAML>=6.0
    rich>=13.3.4
    setuptools>=67.7.2
    yarl>=1.9.1
    tqdm>=4.65.0

[options.entry_points]
console_scripts =
    cyberdrop-dl = cyberdrop_dl.main:main