[metadata]
name = cyberdrop-dl
version = attr: cyberdrop_dl.__version__
author = Jules-WinnfieldX
author_email = JulesWinnfieldII@protonmail.com
description = Bulk downloader for multiple file hosts and forum sites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jules-WinnfieldX/CyberDropDownloader
project_urls =
    Bug Tracker = https://github.com/Jules-WinnfieldX/CyberDropDownloader/issues

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    aiofiles>=0.8.0
    aiohttp>=3.9.1
    aiolimiter>=1.1.0
    aiorun>=2023.7.2
    asyncpraw>=7.7.1
    beautifulsoup4>=4.12.2
    certifi>=2023.7.22
    myjdapi>=1.1.7
    platformdirs>=3.11.0
    PyYAML>=6.0.1
    rich>=13.6.0
    setuptools>=68.2.2
    tqdm>=4.66.1
    yarl>=1.9.2

[options.entry_points]
console_scripts =
    cyberdrop-dl = cyberdrop_dl.main:main